fixes Java tm and clarifies some paragraph

--- a/jday/index.html
+++ b/jday/index.html
@@ -138,9 +138,9 @@
             <div class="six columns">
               <h3>Talks</h3>
 
-              <p>Nell'arco della giornata si susseguono incontri su vari temi di
-            carattere professionale che riguardano il mondo Java e JVM.
-            Esperti Java parleranno delle proprie esperienze professionali in azienda.
+              <p>Nell'arco della giornata si susseguiranno incontri su vari temi
+                  di carattere professionale che riguardano il mondo di Java&#8482; e della JVM.
+                  Esperti del linguaggio parleranno delle proprie esperienze professionali.
             <a href="#quicks">quicks</a>
               </p>
           </div>
@@ -148,9 +148,12 @@
           <div class="six columns">
               <h3>Hands On</h3>
 
-              <p>Il ruolo si rovescia e il pubblico diventa attore principale.
-            Mani alla propria tastiera per scivere codice pulito
-            ed ai propri fogli di carta o digitali per l'analisi di soluzioni eleganti.
+              <p>Il ruolo si rovescia e il pubblico diventa protagonista.
+                  Mani alla propria tastiera per imparare come scrivere codice
+                   pulito ed adottare soluzioni eleganti. Quest’anno proponiamo:
+                   una competizione per coloro che vogliono misurare
+                   la propria abilità sportivamente, ed anche un coding dojo
+                   per coloro che desiderano confrontarsi in maniera collaborativa.
             <br>
             <p>
             Nella versione competitiva
@@ -243,7 +246,7 @@ di java.util.concurrent.Flow
               <h3>Davide Montesin</h3>
 
               <p>
-            Java multithreading consente allo sviluppatore di parallelizzare
+            Java&#8482; multithreading consente allo sviluppatore di parallelizzare
             e utilizzare più risorse della CPU o per gestire l'interazione
             dell'utente indipendentemente dalla rete o un database.
               </p>
@@ -277,9 +280,9 @@ di java.util.concurrent.Flow
               <h3>Luca Guadagnini</h3>
 
               <p>
-          La presentazione riguarderà Java 8 e l'uso dell'oggetto Optional
+          La presentazione riguarderà Java&#8482; 8 e l'uso dell'oggetto Optional
            introdotto nel package java.util. Dalle motivazioni alle
-           novità di optional Java9.
+           novità di optional Java&#8482; 9.
               </p>
           </div>
 
