--- a/jday/index.html
+++ b/jday/index.html
@@ -377,10 +377,8 @@ di java.util.concurrent.Flow
       <div class="row section-content">
 
             <div class="six columns">
-              <h3>Regole.</h3>
+              <h3>Requisiti.</h3>
 
-          <p>Regole minime:
-              </p>
           <ul>
             <li>Portatile</li>
             <li>Java&#8482; Dev Kit</li>
@@ -391,8 +389,6 @@ di java.util.concurrent.Flow
           <div class="six columns">
               <h3>Giuria.</h3>
 
-              <p>Ne fanno parte:
-              </p>
           <ul>
             <li>Boris Sclauzero, <br>XPeppers</li>
             <li>Davide Montesin, <br>JUGTAAS</li>
