adds regsitration hour in index page

--- a/jday/index.html
+++ b/jday/index.html
@@ -124,6 +124,9 @@
              Una giornata per mettersi alla prova, creare contatti e divertirsi.
 	         </p>
 
+           <p class="lead">
+             Registrazione all'evento dalle ore 9.00 alle ore 9.30.
+           </p>
          </div>
 
       </div> <!-- end section-header -->
