refacts add operation with custom separator

--- a/jday/index.html
+++ b/jday/index.html
@@ -127,10 +127,10 @@
              <p class="lead">Una giornata per approfondire con professionisti Java&#8482;,
              il panorama di prodotti, strumenti e metodologie in uso oggi nelle realtà aziendali.<br>
              Una giornata per mettersi alla prova, creare contatti e divertirsi.
-             </p>
+           </p>
 
            <p class="lead">
-             Registrazione all'evento dalle ore 9.00 alle ore 9.30.
+             Verifica registrazione all'evento dalle ore 9.00 alle ore 9.30.
            </p>
          </div>
 
