adds Fusco abstract

--- a/jday/index.html
+++ b/jday/index.html
@@ -238,7 +238,12 @@ di java.util.concurrent.Flow
           <div class="six columns">
               <h3>Mario Fusco</h3>
 
-              <p>Core developer di Drools.</p>
+              <p>Core developer di Drools.<br>
+        Il Gang of Four è stata una Bibbia per tutti gli sviluppattori della mia generazione.
+        Lo scopo del talk è mostrare in una live coding session
+        come reimplementare i più usati GoF pattern in maniera funzionale.
+              </p>
+
           </div>
 
       </div> <!-- end section-content -->
