--- a/jday/index.html
+++ b/jday/index.html
@@ -586,6 +586,17 @@ di java.util.concurrent.Flow
             </ul>
 
          </div>
+         <div class="twelve columns">
+            <h1>Comitato</h1>
+            <ul class="copyright">
+                <li>Carlo Rizzi</li>
+                <li>Mario Santini</li>
+                <li>Nicola Grigoletti</li>
+                <li>Pietro De Grandi</li><br>
+                <li>Coordinamento Trentino Nicola Pedot</li>
+                <li>Coordinamento AltoAdige Davide Montesin
+            </ul>
+        </div>
 
       </div>
 
