fix call-2-action button filtered by adblock plugins

--- a/jday/index.html
+++ b/jday/index.html
@@ -173,7 +173,7 @@
       </div> <!-- end section-content -->
 
 
-      <div id="call-to-action">
+      <div id="call2action">
 
            <div class="row section-ads">
 
@@ -200,7 +200,7 @@
 
            </div> <!-- end section-ads -->
 
-       </div> <!-- end call-to-action -->
+       </div> <!-- end call2action -->
 
    </section> <!-- About Section End-->
 
@@ -344,7 +344,7 @@ di java.util.concurrent.Flow
 
       </div> <!-- end section-content -->
 
-      <div id="call-to-action">
+      <div id="call2action">
 
            <div class="row section-ads">
 
@@ -359,7 +359,7 @@ di java.util.concurrent.Flow
 
            </div> <!-- end section-ads -->
 
-       </div> <!-- end call-to-action -->
+       </div> <!-- end call2action -->
 
    </section> <!-- About Section End-->
 
@@ -435,7 +435,7 @@ di java.util.concurrent.Flow
 
       </div> <!-- end section-content -->
 
-      <div id="call-to-action">
+      <div id="call2action">
 
            <div class="row section-ads">
 
@@ -454,7 +454,7 @@ di java.util.concurrent.Flow
 
            </div> <!-- end section-ads -->
 
-       </div> <!-- end call-to-action -->
+       </div> <!-- end call2action -->
 
    </section> <!-- About Section End-->
 
@@ -506,7 +506,7 @@ di java.util.concurrent.Flow
 
 
 
-      <div id="call-to-action">
+      <div id="call2action">
 
            <div class="row section-ads">
 
@@ -521,7 +521,7 @@ di java.util.concurrent.Flow
 
            </div> <!-- end section-ads -->
 
-       </div> <!-- end call-to-action -->
+       </div> <!-- end call2action -->
 
    </section> <!-- About Section End-->
 
