updates with Deplorian and patrocinio HIT

--- a/jday/index.html
+++ b/jday/index.html
@@ -132,6 +132,9 @@
            <p class="lead">
              Verifica registrazione all'evento dalle ore 9.00 alle ore 9.30.
            </p>
+           <p class="lead">
+             I lavori si apriranno con un saluto di Flavio DeFlorian, </br>Consigliere HIT e Prorettore Vicario.
+           </p>
          </div>
 
       </div> <!-- end section-header -->
@@ -534,14 +537,21 @@ di java.util.concurrent.Flow
 
             <div class="row contact-details">
 
-               <div class="columns">
-                   <h3><i class="fa fa-home"></i>Indirizzo.</h3>
-           <a href="http://www.sociologia.unitn.it/"><img width="100" src="images/sponsors/logo_unitn_it.png"/></a>
-                   <p><a href="http://www.sociologia.unitn.it/">Università di Sociologia</a><br>
-                        Via Verdi, 26 <br>
-                        38122, Trento , Italy
-                    </p>
-               </div>
+                <div class="columns">
+                    <h3><i class="fa fa-home"></i>Indirizzo.</h3>
+            <a href="http://www.sociologia.unitn.it/"><img width="100" src="images/sponsors/logo_unitn_it.png"/></a>
+                    <p><a href="http://www.sociologia.unitn.it/">Università di Sociologia</a><br>
+                         Via Verdi, 26 <br>
+                         38122, Trento , Italy
+                     </p>
+                </div>
+
+                <div class="columns">
+                    <h3><i class="fa fa-home"></i>Patrocinio.</h3>
+            <a href="http://www.trentinoinnovation.eu/"><img width="100" src="images/sponsors/hit.jpg"/></a>
+                <p><a href="http://www.trentinoinnovation.eu/">trentinoinnovation.eu</a><br>
+                     </p>
+                </div>
 
                <div class="columns">
                    <h3>Locandina</h3>
