--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -52,9 +52,8 @@
                 <p class="lead">Nel panorama NoSQL una delle famiglie di database che sta riscuotendo maggior interesse è quella dei GraphDB.</p>                <p class="lead">In questo talk Riccardo ci parlerà delle peculiarità dei GraphDB e in particolare dello standard de facto in Java: Apache Tinkerpop.</p>
                 <p class="lead">Si parlerà poi di OrientDB, un importante progetto open source di GraphDB, introducendone le caratteristiche più interessanti e quelle più avanzate. Verranno discussi sia aspetti teorici che pratici, con esempi di utilizzo ed esperienze sul campo.</p></p>                <p class="lead"><b>Luogo</b>: <a href="https://www.google.it/maps/place/Piazza+de+Fiera,+38122+Trento/@46.0649748,11.1242527,3a,75y,162.09h,85.47t/data=!3m7!1e1!3m5!1srjO4ZcUkcI-IFc1nx4oJhg!2e0!6s%2F%2Fgeo3.ggpht.com%2Fcbk%3Fpanoid%3DrjO4ZcUkcI-IFc1nx4oJhg%26output%3Dthumbnail%26cb_client%3Dmaps_sv.tactile.gps%26thumb%3D2%26w%3D203%26h%3D100%26yaw%3D107.24782%26pitch%3D0!7i13312!8i6656!4m2!3m1!1s0x478276b4aa3e9763:0x4a9f21273faf8b8f?hl=it">Istituto Artigianelli di Piazza Fiera</a></p>                -->
         <p class="lead"><b>Luogo</b>:
-          <!--
-          <a href="https://www.google.it/maps/place/TIS+innovation+park/@46.4821393,11.2953851,13z/data=%214m7%211m4%213m3%211s0x47829c37496afbd1:0xd12f1cb6b537d7a7%212sVia+Werner+Von+Siemens,+19,+39100+Bolzano+BZ%213b1%213m1%211s0x47829c30c467cbf1:0x372add8164eab172?hl=it">TIS            Innovation Park di Bolzano</a>
-					--> <a href="http://www.xpeppers.com/">Sede XPeppers</a></p>
+          Don Narciso Sordo 3 , Trento</br>
+perpendicolare di Via San Pio X sopra la filiale della Cassa Rurale di Trento.</p>
         <!--<p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi al <a href="http://doodle.com/poll/xfgxwfisnnnf9kv5">doodle</a>. In caso di rinuncia vi preghiamo di togliere l'iscrizione dal doodle, visto che i posti sono limitati.</p>-->
         <p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi su <a href="https://framadate.org/VL92m5Jrtfteikrj">sondaggio</a>
           per seguire gli aggiornamenti.</p>
