spostato i vecchi incontri in forlder story e aggiunto analytics.js

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -69,6 +69,7 @@ perpendicolare di Via San Pio X sopra la filiale della Cassa Rurale di Trento.</
       </div>
       <!-- Bootstrap core JavaScript
             ================================================== -->
+        <script async type="text/javascript" src="/js/analytics.js"></script>
       <!-- Placed at the end of the document so the pages load faster --> </div>
   </body>
 </html>
