--- a/iscrizione.html
+++ b/iscrizione.html
@@ -68,6 +68,7 @@
 
             <!-- Bootstrap core JavaScript
             ================================================== -->
+            <script async type="text/javascript" src="/js/analytics.js"></script>
             <!-- Placed at the end of the document so the pages load faster -->
 
         </div>
