--- a/manifesto.html
+++ b/manifesto.html
@@ -135,7 +135,9 @@ Ahi me no, siamo sempre stati erranti ed ospitati in strutture da parte di enti 
 
             <!-- Bootstrap core JavaScript
             ================================================== -->
+            <script async type="text/javascript" src="/js/analytics.js"></script>
             <!-- Placed at the end of the document so the pages load faster -->
 
         </div>
+
     </body></html>
