--- a/incontri.html
+++ b/incontri.html
@@ -66,6 +66,7 @@
       </div>
       <!-- Bootstrap core JavaScript
             ================================================== -->
+            <script async type="text/javascript" src="/js/analytics.js"></script>
       <!-- Placed at the end of the document so the pages load faster --> </div>
   </body>
 </html>
