--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <!-- /container -->
     <!-- Bootstrap core JavaScript
         ================================================== -->
+        <script async type="text/javascript" src="/js/analytics.js"></script>
     <!-- Placed at the end of the document so the pages load faster -->
   </body>
 </html>
