sets gtag into index page (wip)

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <!-- /container -->
     <!-- Bootstrap core JavaScript
         ================================================== -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109268425-1"></script>
         <script async type="text/javascript" src="/js/analytics.js"></script>
     <!-- Placed at the end of the document so the pages load faster -->
   </body>
