primi aggiornamenti sito jday 2018

--- a/jday/index.html
+++ b/jday/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-    <title>JUG Day TAAS 2017- A Day In Java&#8482;</title>
+    <title>JUG Day TAAS 2018- A Day In Java&#8482;</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -60,9 +60,11 @@
               <ul id="nav" class="nav">
                      <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
                      <li><a class="smoothscroll" href="#about">About</a></li>
-                     <li><a class="smoothscroll" href="#quicks">Quicks</a></li>
+                     <li><a class="smoothscroll" href="#quicks">Talks</a></li>
+                     <!--
                      <li><a class="smoothscroll" href="#sprint">Sprint</a></li>
                      <li><a class="smoothscroll" href="#dojo">Dojo</a></li>
+                    -->
                      <li><a class="smoothscroll" href="#location">Location</a></li>
               </ul> <!-- end #nav -->
 
@@ -73,7 +75,7 @@
        <div  id="main" class="row">
 
            <div class="twelve columns">
-        <h1>13 maggio 2017</h1>
+        <h1>19 maggio 2018</h1>
 
                <h1>Un giorno per incontrare la comunità  di Java&#8482; in Trentino!</h1>
 
@@ -132,9 +134,11 @@
            <p class="lead">
              Verifica registrazione all'evento dalle ore 9.00 alle ore 9.30.
            </p>
+           <!---
            <p class="lead">
              I lavori si apriranno con un saluto di Flavio DeFlorian, </br>Consigliere HIT e Prorettore Vicario.
            </p>
+            -->
          </div>
 
       </div> <!-- end section-header -->
@@ -147,10 +151,11 @@
               <p>Nell'arco della giornata si susseguiranno incontri su vari temi
                   di carattere professionale che riguardano il mondo di Java&#8482; e della JVM.
                   Esperti del linguaggio parleranno delle proprie esperienze professionali.
-            <a href="#quicks">quicks</a>
+            <a href="#quicks">talks</a>
               </p>
           </div>
 
+          <!--
           <div class="six columns">
               <h3>Hands On</h3>
 
@@ -172,6 +177,8 @@
               </p>
 
           </div>
+      -->
+
 
       </div> <!-- end section-content -->
 
@@ -221,6 +228,10 @@
 
              <h1>Talks</h1>
 
+             <p class="lead">Presentazioni da 40 minuti tenute da persone che
+                 guidano la comunità Java&#8482 a livello nazionale ed internazionale;
+             </p>
+
              <p class="lead">Presentazioni brevi da 20 minuti ciascuna su un tema specifico di Java&#8482; o JVM
            che può riguardare prodotti, una metodologia, e strumenti per lo sviluppo.
              </p>
@@ -235,9 +246,6 @@
               <h3>Simone Bordet</h3>
 
               <p>Core developer di Jetty.<br>
-            Il concetto di reactive programming tramite
-le API ReactiveStreams, che verranno incluse nel JDK 9 sotto il nome
-di java.util.concurrent.Flow
               </p>
           </div>
 
@@ -245,15 +253,13 @@ di java.util.concurrent.Flow
               <h3>Mario Fusco</h3>
 
               <p>Core developer di Drools.<br>
-        Il Gang of Four è stata una Bibbia per tutti gli sviluppattori della mia generazione.
-        Lo scopo del talk è mostrare in una live coding session
-        come reimplementare i più usati GoF pattern in maniera funzionale.
               </p>
 
           </div>
 
       </div> <!-- end section-content -->
 
+      <!--
       <div class="row section-content">
 
             <div class="six columns">
@@ -276,7 +282,8 @@ di java.util.concurrent.Flow
               </p>
           </div>
 
-      </div> <!-- end section-content -->
+      </div>
+
 
       <div class="row section-content">
 
@@ -300,7 +307,8 @@ di java.util.concurrent.Flow
               </p>
           </div>
 
-      </div> <!-- end section-content -->
+      </div>
+
 
       <div class="row section-content">
 
@@ -323,7 +331,7 @@ di java.util.concurrent.Flow
               </p>
           </div>
 
-      </div> <!-- end section-content -->
+      </div>
 
       <div class="row section-content">
 
@@ -345,7 +353,7 @@ di java.util.concurrent.Flow
               </p>
           </div>
 
-      </div> <!-- end section-content -->
+      </div> <!-- end section-talks-content -->
 
       <div id="call2action">
 
@@ -354,10 +362,12 @@ di java.util.concurrent.Flow
               <div class="twelve columns">
             <p>I posti sono limitati dalla capienza della sala. I primi 20 registrati saranno avvisati via email.
               In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
+              Presto si apriranno le registrazioni all'evento.
+              <!--
                     <div class="action">
                      <a href="https://www.eventbrite.com/e/jug-day-2017-talks-tickets-32013679778" class="button">Registrazione alle presentazioni</a>
                  </div>
-
+             -->
                </div>
 
            </div> <!-- end section-ads -->
@@ -367,7 +377,8 @@ di java.util.concurrent.Flow
    </section> <!-- About Section End-->
 
    <!-- Sprint Section
-   ================================================== -->
+   ==================================================
+
    <section id="sprint">
 
       <div class="row section-header">
@@ -386,7 +397,7 @@ di java.util.concurrent.Flow
 
          </div>
 
-      </div> <!-- end section-header -->
+      </div>
 
       <div class="row section-content">
 
@@ -410,7 +421,7 @@ di java.util.concurrent.Flow
           </ul>
           </div>
 
-      </div> <!-- end section-content -->
+      </div>
 
       <div class="row section-content">
 
@@ -422,12 +433,10 @@ di java.util.concurrent.Flow
           <ul>
             <li>Paros, <br><a href="http://www.paros.srl/">http://www.paros.srl/</a></li>
             <li>ThreadSolutions, <br><a href="http://thread.solutions/">http://thread.solutions/</a></li>
-<!--
-            <li>XPeppers,  <br><a href="http://www.xpeppers.com/">http://www.xpeppers.com/</a></li>
--->
             <li>Belka,  <br><a href="http://www.belka.us/">http://www.belka.us/</a></li>
           </ul>
           </div>
+
 
           <div class="six columns">
               <h3>Vincite.</h3>
@@ -437,7 +446,7 @@ di java.util.concurrent.Flow
               </p>
           </div>
 
-      </div> <!-- end section-content -->
+      </div>
 
       <div id="call2action">
 
@@ -456,15 +465,15 @@ di java.util.concurrent.Flow
 
                </div>
 
-           </div> <!-- end section-ads -->
+           </div>
 
-       </div> <!-- end call2action -->
+       </div>
 
    </section> <!-- About Section End-->
 
 
    <!-- Dojo Section
-   ================================================== -->
+   ==================================================
    <section id="dojo">
 
       <div class="row section-header">
@@ -493,7 +502,7 @@ di java.util.concurrent.Flow
 
          </div>
 
-      </div> <!-- end section-header -->
+      </div>
 
       <div class="row section-content">
 
@@ -506,7 +515,7 @@ di java.util.concurrent.Flow
             <h3>Valentina Servile</h3>
         </div>
 
-      </div> <!-- end section-content -->
+      </div>
 
 
 
@@ -523,9 +532,9 @@ di java.util.concurrent.Flow
 
                </div>
 
-           </div> <!-- end section-ads -->
+           </div>
 
-       </div> <!-- end call2action -->
+       </div>
 
    </section> <!-- About Section End-->
 
@@ -540,9 +549,11 @@ di java.util.concurrent.Flow
 
                 <div class="columns">
                     <h3><i class="fa fa-home"></i>Indirizzo.</h3>
-            <a href="http://www.sociologia.unitn.it/"><img width="100" src="images/sponsors/logo_unitn_it.png"/></a>
-                    <p><a href="http://www.sociologia.unitn.it/">Università di Sociologia</a><br>
-                         Via Verdi, 26 <br>
+            <a href="http://clabitalia.it/index.php/project/clab-trento/"><img width="100" src="images/sponsors/clab.jpg"/></a>
+                    <p><a href="http://clabitalia.it/index.php/project/clab-trento/"></a><br>
+                          Contamination Lab<br>
+                          Istituto Pavoniano Artigianelli<br>
+                          Piazza Fiera, 4<br>
                          38122, Trento , Italy
                      </p>
                 </div>
@@ -553,12 +564,12 @@ di java.util.concurrent.Flow
                 <p><a href="http://www.trentinoinnovation.eu/">trentinoinnovation.eu</a><br>
                      </p>
                 </div>
-
+                <!--
                <div class="columns">
                    <h3>Locandina</h3>
                    <a href="Locandina.pdf"><img src="images/locandina.gif" /></a>
                </div>
-
+           -->
                <div class="columns end">
                    <h3><i class="fa fa-envelope"></i>Email.</h3>
                    <p>jugtaas@googlegroups.com<br>
